fix alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ main{
     margin:0 auto;
     padding:0;
     width:100%;
-    transform:translateY(-14rem)
+    transform:translateY(-10rem)
 }
 
 #header_logo{
